--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=""
+DATABASE_URL="postgresql://[user]:[pwd]@localhost:5432/[db_name]"
+
+CORS_ORIGIN="http://localhost:3000,http://localhost:5000"
