--- a/package.json
+++ b/package.json
@@ -7,20 +7,22 @@
     "seed": "node prisma/seed.js"
   },
   "dependencies": {
-    "@prisma/client": "^5.16.1",
+    "@prisma/client": "^5.17.0",
     "axios": "^1.7.2",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "jade": "^0.29.0",
     "morgan": "~1.9.1",
     "node-cron": "^3.0.3",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
-    "prisma": "^5.16.1",
+    "prisma": "^5.17.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
   }
