--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pju-api",
   "version": "0.0.0",
-  "private": true,
+  "private" : "true",
   "scripts": {
     "start": "node ./bin/www",
     "seed": "node prisma/seed.js"
@@ -11,6 +11,7 @@
     "axios": "^1.7.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.5",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
@@ -20,7 +21,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
-    "prisma": "^5.16.1",
+    "prisma": "^5.17.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
   }
