--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://[user]:[pwd]@localhost:5432/[db_name]"
-
+DATABASE_URL="postgresql://postgres.cskasspwwotwplomvdyp:NgLnK6U3SPu0eKyS@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
+DIRECT_URL="postgresql://postgres.cskasspwwotwplomvdyp:NgLnK6U3SPu0eKyS@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres"
 CORS_ORIGIN="http://localhost:3000,http://localhost:5000"
