--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@
 DATABASE_URL="postgresql://postgres.cskasspwwotwplomvdyp:NgLnK6U3SPu0eKyS@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
 DIRECT_URL="postgresql://postgres.cskasspwwotwplomvdyp:NgLnK6U3SPu0eKyS@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres"
 CORS_ORIGIN="http://localhost:3000,http://localhost:5000"
+SECRET_KEY="dsad7sad8hv7dbdjs8BKSN9"
