--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pju-api",
   "version": "0.0.0",
-  "private" : "true",
+  "private": "true",
   "scripts": {
     "start": "node ./bin/www",
     "seed": "node prisma/seed.js"
@@ -9,6 +9,7 @@
   "dependencies": {
     "@prisma/client": "^5.17.0",
     "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -16,6 +17,7 @@
     "express": "^4.19.2",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "node-cron": "^3.0.3",
     "socket.io": "^4.7.5"
