--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ DIRECT_URL="postgresql://postgres.cskasspwwotwplomvdyp:NgLnK6U3SPu0eKyS@aws-0-ap
 CORS_ORIGIN="http://localhost:3000,http://localhost:5000"
 SECRET_KEY="dsad7sad8hv7dbdjs8BKSN9"
 PORT=5000
+
+email=admin@gmail.com
+pwd=adminMSIB
