--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres.cskasspwwotwplomvdyp:NgLnK6U3SPu0eKyS@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
-DIRECT_URL="postgresql://postgres.cskasspwwotwplomvdyp:NgLnK6U3SPu0eKyS@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres"
+DATABASE_URL="database_url"
+DIRECT_URL="databse_direct_url"
 CORS_ORIGIN="http://localhost:3000,http://localhost:5000"
-SECRET_KEY="dsad7sad8hv7dbdjs8BKSN9"
+SECRET_KEY="your-secret-key"
