--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.0.0",
   "private": "true",
   "scripts": {
-    "start": "node ./bin/www",
-    "seed": "node prisma/seed.js"
+    "start": "node app.js",
+    "startdev": "nodemon index.js",
+    "seed": "node prisma/seed.js",
+    "build": "webpack"
   },
   "dependencies": {
     "@prisma/client": "^5.17.0",
+    "aws-sdk": "^2.1674.0",
     "axios": "^1.7.2",
-    "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -18,14 +20,22 @@
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
     "jsonwebtoken": "^9.0.2",
+    "mock-aws-s3": "^4.0.2",
     "morgan": "~1.9.1",
+    "nock": "^13.5.4",
     "node-cron": "^3.0.3",
+    "path": "^0.12.7",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.14.10",
+    "bcryptjs": "^2.4.3",
+    "nodemon": "^3.1.4",
     "prisma": "^5.17.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4"
   }
 }
