--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "nock": "^13.5.4",
     "node-cron": "^3.0.3",
     "path": "^0.12.7",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
