--- a/.env
+++ b/.env
@@ -4,7 +4,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:123456@34.101.136.1:5432/pju-db"
+# DATABASE_URL="postgresql://postgres:123456@34.101.136.1:5432/pju-db"
+DATABASE_URL="postgresql://postgres:RHSmau123@localhost:5432/pju-db"
 # DATABASE_URL="postgresql://postgres.cskasspwwotwplomvdyp:NgLnK6U3SPu0eKyS@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres"
 # DIRECT_URL="postgresql://postgres.cskasspwwotwplomvdyp:NgLnK6U3SPu0eKyS@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres"
 CORS_ORIGIN="http://localhost:3000,http://localhost:5000,https://pju-monitoring-web-pens.vercel.app"
