--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:123456@34.101.136.1:5432/pju-db"
-# DATABASE_URL="postgresql://postgres:RHSmau123@localhost:5432/pju-db"
+# DATABASE_URL="postgresql://postgres:123456@34.101.136.1:5432/pju-db"
+DATABASE_URL="postgresql://postgres:RHSmau123@localhost:5432/pju-db"
 # DATABASE_URL="postgresql://pjudb_molecular:16323c233b45cdc8c87e53f1824263dfccb74623@0h7.h.filess.io:5433/pjudb_molecular"
 # DATABASE_URL="postgresql://postgres.cskasspwwotwplomvdyp:NgLnK6U3SPu0eKyS@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres"
 # DIRECT_URL="postgresql://postgres.cskasspwwotwplomvdyp:NgLnK6U3SPu0eKyS@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres"
