handle user seeder

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,7 @@ DATABASE_URL="database_url"
 DIRECT_URL="databse_direct_url"
 CORS_ORIGIN="http://localhost:3000,http://localhost:5000"
 SECRET_KEY="your-secret-key"
+
+
+ADMIN_EMAIL=admin@gmail.com
+ADMIN_PASSWORD=adminMSIB
