--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 node_modules/
 # Keep environment variables out of version control
 .env
-client_test/*
-client_test/
+client-test/*
+client-test/
 dist/*
 dist
 # /client_test
