--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prod": "node dist/final.js"
   },
   "dependencies": {
-    "@prisma/client": "^5.17.0",
+    "@prisma/client": "^5.20.0",
     "aws-sdk": "^2.1674.0",
     "axios": "^1.7.2",
     "cookie-parser": "~1.4.4",
@@ -26,6 +26,7 @@
     "morgan": "~1.9.1",
     "nock": "^13.5.4",
     "node-cron": "^3.0.3",
+    "node-schedule": "^2.1.1",
     "path": "^0.12.7",
     "socket.io": "^4.7.5",
     "swagger-jsdoc": "^6.2.8",
@@ -36,7 +37,7 @@
     "@types/node": "^20.14.10",
     "bcryptjs": "^2.4.3",
     "nodemon": "^3.1.4",
-    "prisma": "^5.17.0",
+    "prisma": "^5.20.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
     "webpack": "^5.93.0",
