--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.1",
     "express-validator": "^7.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
     "jsonwebtoken": "^9.0.2",
+    "mjpeg-server": "^0.3.1",
     "mock-aws-s3": "^4.0.2",
     "morgan": "~1.9.1",
     "nock": "^13.5.4",
