--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "fluent-ffmpeg": "^2.1.3",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.5.0",
     "mjpeg-server": "^0.3.1",
     "mock-aws-s3": "^4.0.2",
     "morgan": "~1.9.1",
